--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +37,7 @@
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
     "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11"
+    "@storybook/react": "^5.0.11",
+    "storybook-addon-styled-component-theme": "^1.2.3"
   }
 }
