--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-testing-library": "^7.0.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
@@ -38,6 +41,7 @@
     "@storybook/addon-storysource": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "jest-styled-components": "^6.3.1",
     "storybook-addon-styled-component-theme": "^1.2.3"
   }
 }
