--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "multiplan-challenge-chat",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
