--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "jest"
+    "start": "node -r dotenv/config -r ./app.js",
+    "test": "jest --setupFiles dotenv/config"
   },
   "author": "Romulo Mont Serrat",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "http": "^0.0.0",
     "jest": "^24.7.1",
