--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multiplan-challenge-chat",
+  "name": "socket.io-react-chat",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
