--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-storysource": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.5",
     "jest-styled-components": "^6.3.1",
     "storybook-addon-styled-component-theme": "^1.2.3"
   }
